@@ -1,3 +1,7 @@
+2010-08-09 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/bug1757671.c: fixed for 64 bit arch
+
 2010-08-08 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCval.c (valMinus): applied patch from bug 3037889 though not fixed,
